Fix minor styling issue with Back button showing up way too wide on Desktop screens

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -65,6 +65,10 @@ ul {
     height: 200px;
   }
 
+  .back-btn{
+    width: 80px;
+  }
+
   .back-btn:hover{
     box-shadow: 6px 5px 30px #505050;
   }
